# AgentOps

./: Dockerfile  README.md  deploy.yml  docker-compose.yml  main.py  pyproject.toml
.github/workflows/: deploy.yml
alembic/: env.py
alembic/versions/: 2e74faa1dc71_add_on_delete_cascade_in_chat_message.py  585662129743_add_session_router.py  6fe55db90592_add_passive_deletes.py  99652f840ace_change_to_cascade_option.py
api/: router.py
api/openai_response/: router.py
api/session/: router.py
application/: openai_usecases.py  session_usecases.py
domain/: models.py  parser.py  ports.py  schemas.py
domain/openai_response/: interfaces.py  models.py  ports.py  prompt.py
infrastructure/: mydb_repository.py
infrastructure/db/: __init__.py  base.py  models.py
infrastructure/openai_response/: api_repository.py  ports.py
